# morphems_without_borders

./: LICENSE  README.md  pyproject.toml
data/alignment/: README.md  atb3_segmented_utf8.txt  bolt_segmented_offsets.txt  bolt_segmented_utf8.txt  extract_alignment_data.py
data/alignment/pred/: atb3_allam_segmented_offsets.txt  atb3_camel_segmented_offsets.txt  bolt_allam_segmented_offsets.txt  bolt_camel_segmented_offsets.txt  bolt_cohere_segmented_offsets.txt  bolt_fanar_segmented_offsets.txt  bolt_farasa_segmented_offsets.txt  bolt_gpt4_segmented_offsets.txt  bolt_gpt4o_segmented_offsets.txt  bolt_llama3_segmented_offsets.txt
data/productivity/: productivity_dataset_with_sentences.json
morpheme_metrics/: cli.py
morpheme_metrics/alignment/: README.md  fertility.py  io_utils.py  morpheme_boundary_f1.py  morpheme_coverage_rate.py  morpheme_f1.py  token_totals.py
morpheme_metrics/productivity/: README.md  __init__.py  prompts.py  utils.py
