[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "morphems-without-borders" 
version = "2026.0.0"

dependencies = []
requires-python = ">= 3.8"

[project.optional-dependencies]
data-extraction = ["camel-tools==1.5.5"]

[project.scripts]
morpheme-eval = "morpheme_metrics.alignment.cli:main" 

[tool.setuptools.packages.find]
where = ["."]
include = ["morpheme_metrics*"]
